Removed old documentation

--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,16 @@
         <nav>
             <div class="vertical-menu">
                 <div class="following-nav">
-                    <a href="#intro">How to use</a>
+                    <!-- <a href="#intro">How to use</a>
                     <a href="#register">Register</a>
                     <a href="#login">Login</a>
                     <a href="#users">Users</a>
                     <a href="#reports">Reports</a>
-                    <a href="#top">
-                        <div class="tooltip top">
-                            <img class="top-image" src="/images/takeMeToTheTop.png" alt="">
-                            <span class="tooltiptext">Click me to get to the top!</span>
-                        </div>
+                    <a href="#top"> -->
+                    <div class="tooltip top">
+                        <img class="top-image" src="/images/takeMeToTheTop.png" alt="">
+                        <span class="tooltiptext">Click me to get to the top!</span>
+                    </div>
                     </a>
                 </div>
             </div>
@@ -31,7 +31,7 @@
             <h1 id="top" class="head-title">Trading Platform API</h1>
             This is an API for the project "Trading Platform".
             <hr>
-            <article id="intro" class="article">
+            <!-- <article id="intro" class="article">
                 <div class="bottom-space"></div>
             </article>
             <article id="register" class="article">
@@ -141,7 +141,7 @@
     "Following error occured": "Invalid token"
     }           
 </pre>
-            </article>
+            </article> -->
         </div>
     </div>
 
